--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "expo": "~52.0.6",
+    "expo-file-system": "~18.0.3",
+    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.1"
+    "react-native": "0.76.1",
+    "expo-media-library": "~17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
